--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -11,6 +11,12 @@ sourceCompatibility = '1.8'
 repositories {
 	mavenCentral()
 }
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.example.demo.DemoApplication'
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -18,8 +24,8 @@ dependencies {
 	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 	implementation group: 'log4j', name: 'apache-log4j-extras', version: '1.2.17'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
-	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
+	//compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
+	//compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -28,6 +34,8 @@ dependencies {
 	}
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+	
+	
 }
 
 tasks.test {
