--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "bootstrap": "^5.0.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "primeicons": "^4.1.0",
